<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_vs"
        android:title="@string/title_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more"
        app:showAsAction="always"/>




</menu>