<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:scrollbars="none"
    tools:context="com.reemsib.mst3jl.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/new_user"
            android:textColor="@color/colorDark"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical|center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_login"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="@dimen/_13sdp"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="@font/tajawal_regular"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edit_login"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:padding="@dimen/_13sdp"
                    android:textSize="16sp"
                    android:fontFamily="@font/tajawal_regular"
                    />
                <!--            <com.hbb20.CountryCodePicker-->
                <!--                android:id="@+id/ccp"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:ccp_showFullName="false"-->
                <!--                app:ccp_showPhoneCode="true"-->
                <!--                app:ccp_showNameCode="false"-->
                <!--                app:ccp_defaultNameCode="SA"-->
                <!--                app:ccp_defaultLanguage="ARABIC"-->
                <!--                app:ccp_textSize="@dimen/_12ssp"/>-->
                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_down_ui"
                    android:drawablePadding="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/intro"
                    android:textSize="16sp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textColor="@color/colorDark" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_edit_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="@font/tajawal_regular"
                android:padding="@dimen/_13sdp" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_edit_login"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="@font/tajawal_regular"
                android:padding="@dimen/_13sdp" />

            <EditText
                android:id="@+id/et_confirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_edit_login"
                android:hint="@string/confirmPwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="@font/tajawal_regular"
                android:padding="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/gender"
                    android:textSize="16sp"
                    android:textColor="@color/colorDark" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:fontFamily="@font/tajawal_regular"
                        />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:fontFamily="@font/tajawal_regular"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_policy"
                    android:fontFamily="@font/tajawal_regular"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

<!--            <Button-->
<!--                android:id="@+id/btn_regiter"-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/_50sdp"-->
<!--                android:layout_marginTop="@dimen/_15sdp"-->
<!--                android:layout_marginEnd="@dimen/_50sdp"-->
<!--                android:background="@drawable/bg_btn"-->
<!--                android:fontFamily="@font/tajawal_medium"-->
<!--                android:text="@string/register" />-->
            <com.kusu.loadingbutton.LoadingButton
                android:id="@+id/btn_regiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_isShadowEnable="false"
                app:lb_isCircular="true"
                app:lb_loaderColor="@android:color/white"
                app:lb_shadowColor="@color/colorPrimaryDark"
                app:lb_shadowHeight="5dp"
                android:fontFamily="@font/tajawal_bold"
                android:background="@drawable/bg_btn"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
