<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:layout_gravity="center"
    tools:context="com.reemsib.mst3jl.activity.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lock_24px" />

        <TextView
            android:id="@+id/tv_recoverPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/recovry_pwd"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/tajawal_medium"
            android:text="@string/send_pwd"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recoverPwd" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/tajawal_regular"
            android:padding="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

<!--        <Button-->
<!--            android:id="@+id/btn_reset"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_50sdp"-->
<!--            android:text="@string/send"-->
<!--            android:background="@drawable/bg_btn"-->
<!--            style="?android:borderlessButtonStyle"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_marginStart="@dimen/_50sdp"-->
<!--            android:layout_marginEnd="@dimen/_50sdp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:fontFamily="@font/tajawal_bold"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/et_email" />-->

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:lb_buttonColor="@color/colorPrimary"
            app:lb_isShadowEnable="false"
            app:lb_isCircular="true"
            app:lb_loaderColor="@android:color/white"
            app:lb_shadowColor="@color/colorPrimaryDark"
            app:lb_shadowHeight="5dp"
            android:fontFamily="@font/tajawal_bold"
            android:background="@drawable/bg_btn"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>